--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "babel-preset-expo": "^5.0.0",
+    "expo-graphics": "^1.1.0",
+    "expo-three": "^3.0.0-alpha.8"
   },
   "private": true
 }
